compiler/typ/tests/fixtures/diagnostics/0208_adt_record_update_bool_field_08.ml.infer.expected
File "0208_adt_record_update_bool_field_08.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0208_adt_record_update_bool_field_08 is not a valid module name.

File "0208_adt_record_update_bool_field_08.ml", line 3, characters 33-34:
3 | let _ = { base_theta with live = 8 }
                                     ^
Error: The constant 8 has type int but an expression was expected of type
         bool
